--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,22 @@
-<div id="content">
- Raw fusion
-</div>
+<div class="main-content">
+      <div class="main-img">
+        <%= link_to image_tag "raw_food_main.jpg" %>
+      </div>
+      <div class="main-grid">
+        <div class="col-md-4 grid1of3">
+        <!--  <img src="img/main_img1_copy.jpg" alt="herbs">-->
+        <h3>Raw cookies</h3>
+        <p>Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. </p>
+        </div>
+        <div class="col-md-4 grid2of3">
+        <!--  <img src="img/main_img2_copy.jpg" alt="herbs"> -->
+        <h3>Raw dishes</h3>
+        <p>Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. </p>
+        </div>
+        <div class="col-md-4 grid3of3">
+        <!--  <img src="img/main_img3_copy.jpg" alt="herbs"> -->
+        <h3>Raw lifestyle</h3>
+        <p>Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. </p>
+        </div>
+      </div>
+    </div> <!-- /.main-content -->
