--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Rawfusion</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Rawfusion</title>
+    <link href='http://fonts.googleapis.com/css?family=Flamenco|Josefin+Sans:400,600,700,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="container"> 
+      <div class="navbar navbar-default raw-navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Rawfusion</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav raw-list">
+              <li><a href="#">home</a></li>
+              <li><a href="#">people to follow</a></li>
+              <li><a href="#">articles on health</a></li>
+              <li><a href="#">books &amp; ebooks</a></li>
+              <li><a href="#">healthy recipes</a></li>
+            </ul>
+          </div>
+        </div>
+      </div> <!-- /.navbar -->
 
-<%= yield %>
-
-</body>
+      <%= yield %>
+      
+    </div> <!-- /.container -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+  </body> 
 </html>
