--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Rawfusion</title>
     <link href='http://fonts.googleapis.com/css?family=Flamenco|Josefin+Sans:400,600,700,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
     <%= csrf_meta_tags %>
   </head>
   <body>
@@ -23,7 +23,7 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav raw-list">
               <li><a href="#">home</a></li>
-              <li><a href="#">people to follow</a></li>
+              <li><a href="#">pages to follow</a></li>
               <li><a href="#">articles on health</a></li>
               <li><a href="#">books &amp; ebooks</a></li>
               <li><a href="#">healthy recipes</a></li>
@@ -33,9 +33,10 @@
       </div> <!-- /.navbar -->
 
       <%= yield %>
-      
+
     </div> <!-- /.container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <%= javascript_include_tag "http://getbootstrap.com/dist/js/bootstrap.min.js" %>
+    <%= javascript_include_tag "/assets/pages/main" %>
   </body> 
 </html>
