--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav raw-list">
-              <li><a href="#">home</a></li>
-              <li><a href="#">pages to follow</a></li>
-              <li><a href="#">articles on health</a></li>
-              <li><a href="#">books &amp; ebooks</a></li>
-              <li><a href="#">healthy recipes</a></li>
+              <li><a href="#">smoothies</a></li>
+              <li><a href="#">salads</a></li>
+              <li><a href="#">cookies</a></li>
+              <li><a href="#">stews</a></li>
+              <li><a href="#">light meals</a></li>
             </ul>
           </div>
         </div>
