admin interface mostly built, ui improved

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,5 @@
 <div class="main-content">
 
-      <div class="main-img">
-        <%= link_to image_tag "raw_food_main.jpg" %>
-      </div>
       <div class="main-grid">
         <div class="col-md-4 grid1of3">
         <!--  <img src="img/main_img1_copy.jpg" alt="herbs">-->
@@ -21,4 +18,6 @@
         </div>
       </div>
     </div> <!-- /.main-content -->
+
+    <script src=""></script>
     
