--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -9,6 +9,8 @@ body {
 	font-family: 'Flamenco', cursive;
 	font-weight: 600;
 	font-size: 1.6em;
+	background-image: url('restaurant_icons.png');
+	background-repeat: repeat;
 }
 .container {
 	margin: 0 auto;
@@ -23,10 +25,19 @@ body {
 }
 
 .raw-navigation {
-	background-color: #54A782;
+	background-color: #E3B2C4;
 
-	.navbar-header .icon-bar {
+	.navbar-header {
+		.navbar-brand {
+			font-style: italic;
+			font-weight: 900;
+			font-size: 1.3em;
+			letter-spacing: 2px;
+			color: #000;
+		}
+		.icon-bar {
 		background-color: #fff;
+		}
 	}
 
 	.raw-list {
@@ -34,19 +45,11 @@ body {
 		font-size: 18px;
 
 		> li > a {
-			color: #fff;
+			color: #333333;
+			font-size: 1.1em;
 			&:hover {
-				color: #FFCC99;
+				color: #555	;
 			}
-		}
-	}
-	.navbar-header a {
-		color: #FF9966;
-		font-size: 1.3em;
-		font-weight: 700;
-
-		&:hover {
-			color: #FFCC99;	
 		}
 	}
 	
