--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <%= link_to "Rawfusion", root_path, class: "navbar-brand" %>
+            <%= link_to "Nena's kitchen", root_path, class: "navbar-brand" %>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav raw-list">
-              <li><a href="#">smoothies</a></li>
-              <li><a href="#">salads</a></li>
-              <li><%= link_to "sweets", sweets_path, class: "" %><li>
-              <li><a href="#">stews</a></li>
+              <li><a href="#">breakfast ideas</a></li>
               <li><a href="#">light meals</a></li>
+              <li><a href="#">salads</a></li>
+              <li><a href="#">stews &amp; soups</a></li>
+              <li><%= link_to "desserts", sweets_path, class: "" %><li>
+              
+
+              
             </ul>
           </div>
         </div>
