--- a/app/views/main/details_view.html.erb
+++ b/app/views/main/details_view.html.erb
@@ -1,5 +1,5 @@
 <div class="main-content">
-	<div style="float:left; margin-right:20px"><img src="/assets/granola2.jpg" /></div>
+	<div style="float:left; margin-right:20px"><img src="/assets/amaranth2.jpg" /></div>
 	<div style="float:left">
 		<h3 style="margin-top:0">Ingredients placeholder<h3>
 		<ul>
@@ -17,6 +17,10 @@
 		<h4>Notes placeholder</h4>
 		<p>Blah blah blah truc truc truc blah blah truc truc</p>
 	</div>
-
+	<div class="admin-section">
+		<h3>ADMIN STUFF</h3>
+		<%= link_to "Back", sweets_path, :class => "btn btn-default btn-lg admin-pg-btn admin-back-btn", :role => "button" %>
+		<%= link_to "Edit" , root_path, :class => "btn btn-default btn-lg admin-pg-btn", :role => "button" %>
+	</div>
 
 </div>
