--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,4 +1,5 @@
-<div id="admin-page" class="main-content">
+<div id="admin-page" class="main-content admin-section">
 	<h1>Welcome to your admin page</h1>
 	<p>Click on any link in the navigation menu to edit it. </p>
+	<%= link_to "Log out", logout_path, :class => "logout btn btn-default btn-lg admin-pg-btn" %>
 </div>
